--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,3 @@
-APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -12,6 +11,12 @@ DB_PORT=3306
 DB_DATABASE=homestead
 DB_USERNAME=homestead
 DB_PASSWORD=secret
+
+MONGO_HOST=127.0.0.1
+MONGO_PORT=
+MONGO_DATABASE=
+MONGO_USERNAME=
+MONGO_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
