--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,8 @@
         "jenssegers/mongodb": "^3.4",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
-        "mongodb/mongodb": "^1.4"
+        "mongodb/mongodb": "^1.4",
+        "tymon/jwt-auth": "^0.5.12"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
