--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,11 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
+        "firebase/php-jwt": "^5.0",
         "fzaninotto/faker": "^1.8",
         "jenssegers/mongodb": "^3.4",
         "laravel/framework": "5.7.*",
-        "laravel/tinker": "^1.0",
-        "mongodb/mongodb": "^1.4",
-        "tymon/jwt-auth": "^0.5.12"
+        "laravel/tinker": "^1.0"
     },
     "require-dev": {
         "beyondcode/laravel-dump-server": "^1.0",
@@ -29,7 +28,11 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/Utils/helpers.php",
+            "app/Utils/jwt.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
