--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     },
     "dependencies": {
         "apexcharts": "^2.2.1",
-        "vue-apexcharts": "^1.2.4"
+        "vue-apexcharts": "^1.2.4",
+        "vue-router": "^3.0.1"
     }
 }
