--- a/.env.example
+++ b/.env.example
@@ -44,4 +44,9 @@ MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
 JWT_SECRET=
+JWT_EXPIRES=3600
+
 API_SECRET=
+
+MIX_BASE_URL="${APP_URL}/api"
+MIX_API_SECRET="${API_SECRET}"
