--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "axios": "^0.18",
+        "axios": "^0.18.0",
         "bootstrap": "^4.0.0",
         "cross-env": "^5.1",
         "jquery": "^3.2",
@@ -21,7 +21,11 @@
     },
     "dependencies": {
         "apexcharts": "^2.2.1",
+        "moment": "^2.22.2",
         "vue-apexcharts": "^1.2.4",
-        "vue-router": "^3.0.1"
+        "vue-axios": "^2.1.4",
+        "vue-router": "^3.0.1",
+        "vuex": "^3.0.1",
+        "vuex-persistedstate": "^2.5.4"
     }
 }
