--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "moment": "^2.22.2",
         "vue-apexcharts": "^1.2.4",
         "vue-axios": "^2.1.4",
+        "vue-notification": "^1.3.13",
         "vue-router": "^3.0.1",
         "vuex": "^3.0.1",
         "vuex-persistedstate": "^2.5.4"
