--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js",
-    "/css/app.css": "/css/app.css"
+    "/js/app.js": "/js/app.js?id=ca6a44b2d9fb9b459b56",
+    "/css/app.css": "/css/app.css?id=e69fdc14fd82e014e7e1"
 }
