--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "fzaninotto/faker": "^1.8",
         "jenssegers/mongodb": "^3.4",
         "laravel/framework": "5.7.*",
+        "laravel/horizon": "^1.4",
         "laravel/tinker": "^1.0"
     },
     "require-dev": {
