--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "fideloper/proxy": "^4.0",
         "firebase/php-jwt": "^5.0",
         "fzaninotto/faker": "^1.8",
+        "guzzlehttp/guzzle": "^6.3",
         "jenssegers/mongodb": "^3.4",
         "laravel/framework": "5.7.*",
         "laravel/horizon": "^1.4",
