--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "apexcharts": "^2.2.1",
         "moment": "^2.22.2",
+        "pusher-js": "^4.3.1",
         "vue-apexcharts": "^1.2.4",
         "vue-axios": "^2.1.4",
         "vue-notification": "^1.3.13",
