--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "vue-axios": "^2.1.4",
         "vue-notification": "^1.3.13",
         "vue-router": "^3.0.1",
+        "vue-select": "^2.5.1",
         "vuex": "^3.0.1",
         "vuex-persistedstate": "^2.5.4"
     }
