add individual dispatcher

--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,4 +1,4 @@
 {
-    "/js/app.js": "/js/app.js?id=aef7f7197bcba6ec930e",
-    "/css/app.css": "/css/app.css?id=e69fdc14fd82e014e7e1"
+    "/js/app.js": "/js/app.js",
+    "/css/app.css": "/css/app.css"
 }
