--- a/package.json
+++ b/package.json
@@ -30,5 +30,8 @@
         "vue-select": "^2.5.1",
         "vuex": "^3.0.1",
         "vuex-persistedstate": "^2.5.4"
+    },
+    "engines" : {
+        "node" : "8.12"
     }
 }
